--- a/index.html
+++ b/index.html
@@ -323,6 +323,18 @@
       </footer>
     </div>
     <script type="text/javascript" charset="utf-8">
+      // Optional: auto detect
+      const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+      setTheme(prefersDark ? "dark" : "light");
+
+      // Theme switching based on system or manual toggle
+      function setTheme(theme) {
+        document.documentElement.classList.remove("light", "dark");
+        document.documentElement.classList.add(theme);
+      }
+      
+    </script>
+    <script type="text/javascript" charset="utf-8">
       const FragmentManeger = {
         main: {
           getFragment: ["home", "search", "broadcast", "profile"],
